--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
     "recoil": "^0.6.1",
     "safe-json-stringify": "^1.2.0"
   },
+  "resolutions": {
+    "core-js": "^3.23.3",
+    "core-js-pure": "^3.23.3"
+  }
   "devDependencies": {
     "@types/node": "17.0.21",
     "@types/react": "17.0.39",
